--- a/index.html
+++ b/index.html
@@ -98,22 +98,22 @@
 <body>
     <div class="container">
         <header>
-            <h1>TechNova Solutions</h1>
+            <h1>The new world</h1>
             <p class="tagline">Innovating the Future of IT</p>
         </header>
         <main>
             <section class="features">
                 <div class="feature">
-                    <h2>Cloud Services</h2>
-                    <p>Scalable and secure cloud solutions tailored to your business needs.</p>
+                    <h2>Continuous Improvement</h2>
+                    <p>Constantly asking myself "How could I do that?", "How does that work?", and figuring it out</p>
                 </div>
                 <div class="feature">
-                    <h2>AI Integration</h2>
-                    <p>Cutting-edge AI technologies to optimize your operations and decision-making.</p>
+                    <h2>Constantly Evolving</h2>
+                    <p>It is human nature to resist change, from all levels.  To learn to let go of what you are uncesessarily holding onto is key.</p>
                 </div>
                 <div class="feature">
                     <h2>Cybersecurity</h2>
-                    <p>Advanced protection systems to safeguard your digital assets.</p>
+                    <p>Privacy is an illusion.  Someone could always be watching and/or listening.  </p>
                 </div>
             </section>
             <div class="cta">
