--- a/index.html
+++ b/index.html
@@ -1,125 +1,105 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechNova Solutions</title>
-    <style>
-        :root {
-            --primary-color: #00ffff;
-            --secondary-color: #ff00ff;
-            --tertiary-color: #ffff00;
-            --bg-color: #121212;
-            --text-color: #ffffff;
-        }
-        body {
-            font-family: 'Courier New', monospace;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        header {
-            text-align: center;
-            margin-bottom: 40px;
-        }
-        h1 {
-            font-size: 3rem;
-            margin-bottom: 10px;
-            text-shadow: 0 0 10px var(--primary-color),
-                         0 0 20px var(--secondary-color),
-                         0 0 30px var(--tertiary-color);
-        }
-        .tagline {
-            font-size: 1.2rem;
-            color: var(--primary-color);
-        }
-        .features {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            gap: 20px;
-        }
-        .feature {
-            flex-basis: calc(33.333% - 20px);
-            min-width: 250px;
-            background-color: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 255, 255, 0.3);
-            transition: transform 0.3s ease;
-        }
-        .feature:hover {
-            transform: translateY(-5px);
-        }
-        .feature h2 {
-            color: var(--secondary-color);
-        }
-        .feature p {
-            color: var(--text-color);
-        }
-        .cta {
-            text-align: center;
-            margin-top: 40px;
-        }
-        .cta-button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: var(--primary-color);
-            color: var(--bg-color);
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-        }
-        .cta-button:hover {
-            background-color: var(--secondary-color);
-        }
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2rem;
-            }
-            .feature {
-                flex-basis: 100%;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <header>
-            <h1>The new world</h1>
-            <p class="tagline">Innovating the Future of IT</p>
+import React, { useState, useEffect } from 'react';
+import { motion, AnimatePresence } from 'framer-motion';
+
+const Feature = ({ title, description }) => (
+  <motion.div
+    className="bg-opacity-10 bg-white p-6 rounded-lg shadow-lg transition-all duration-300 hover:-translate-y-2"
+    whileHover={{ scale: 1.05 }}
+    whileTap={{ scale: 0.95 }}
+  >
+    <h2 className="text-2xl font-bold mb-4 text-fuchsia-500">{title}</h2>
+    <p className="text-white">{description}</p>
+  </motion.div>
+);
+
+const RobinOBrienSite = () => {
+  const [currentFeature, setCurrentFeature] = useState(0);
+  const features = [
+    {
+      title: "Continuous Improvement",
+      description: "Constantly asking myself \"How could I do that?\", \"How does that work?\", and figuring it out"
+    },
+    {
+      title: "Constantly Evolving",
+      description: "It is human nature to resist change, from all levels. To learn to let go of what you are unnecessarily holding onto is key."
+    },
+    {
+      title: "Cybersecurity",
+      description: "Privacy is an illusion. Someone could always be watching and/or listening."
+    }
+  ];
+
+  useEffect(() => {
+    const interval = setInterval(() => {
+      setCurrentFeature((prev) => (prev + 1) % features.length);
+    }, 5000);
+    return () => clearInterval(interval);
+  }, []);
+
+  return (
+    <div className="min-h-screen flex flex-col justify-center bg-gray-900 text-white font-sans">
+      <div className="max-w-6xl mx-auto px-4 py-8">
+        <header className="text-center mb-12">
+          <motion.h1
+            className="text-5xl md:text-6xl font-bold mb-4"
+            initial={{ opacity: 0, y: -50 }}
+            animate={{ opacity: 1, y: 0 }}
+            transition={{ duration: 1 }}
+          >
+            <span className="text-cyan-400">Robin </span>
+            <span className="text-fuchsia-500">O'Brien</span>
+          </motion.h1>
+          <motion.p
+            className="text-xl text-cyan-400"
+            initial={{ opacity: 0 }}
+            animate={{ opacity: 1 }}
+            transition={{ delay: 0.5, duration: 1 }}
+          >
+            Innovating the Future of Technology
+          </motion.p>
         </header>
+        
         <main>
-            <section class="features">
-                <div class="feature">
-                    <h2>Continuous Improvement</h2>
-                    <p>Constantly asking myself "How could I do that?", "How does that work?", and figuring it out</p>
-                </div>
-                <div class="feature">
-                    <h2>Constantly Evolving</h2>
-                    <p>It is human nature to resist change, from all levels.  To learn to let go of what you are uncesessarily holding onto is key.</p>
-                </div>
-                <div class="feature">
-                    <h2>Cybersecurity</h2>
-                    <p>Privacy is an illusion.  Someone could always be watching and/or listening.  </p>
-                </div>
-            </section>
-            <div class="cta">
-                <a href="#" class="cta-button">Get Started</a>
+          <section className="mb-12 relative h-64">
+            <AnimatePresence mode="wait">
+              <motion.div
+                key={currentFeature}
+                className="absolute w-full"
+                initial={{ opacity: 0, x: 100 }}
+                animate={{ opacity: 1, x: 0 }}
+                exit={{ opacity: 0, x: -100 }}
+                transition={{ duration: 0.5 }}
+              >
+                <Feature {...features[currentFeature]} />
+              </motion.div>
+            </AnimatePresence>
+            <div className="flex justify-center mt-4">
+              {features.map((_, index) => (
+                <button
+                  key={index}
+                  className={`w-3 h-3 rounded-full mx-1 ${
+                    index === currentFeature ? 'bg-cyan-400' : 'bg-gray-600'
+                  }`}
+                  onClick={() => setCurrentFeature(index)}
+                />
+              ))}
             </div>
+          </section>
+          
+          <div className="text-center">
+            <motion.a
+              href="#"
+              className="inline-block px-6 py-3 bg-cyan-500 text-gray-900 font-bold rounded-lg transition-colors duration-300 hover:bg-fuchsia-500"
+              whileHover={{ scale: 1.1 }}
+              whileTap={{ scale: 0.9 }}
+            >
+              Get in Touch
+            </motion.a>
+          </div>
         </main>
+      </div>
     </div>
-</body>
-</html>
+  );
+};
+
+export default RobinOBrienSite;
