--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ const RobinOBrienSite = () => {
   const features = [
     {
       title: "Continuous Improvement",
-      description: "Constantly asking myself \"How could I do that?\", \"How does that work?\", and figuring it out"
+      description: "Constantly asking myself \"How could I do that?\", \"How does that work?\", and figuring it out."
     },
     {
       title: "Constantly Evolving",
@@ -46,8 +46,8 @@ const RobinOBrienSite = () => {
             animate={{ opacity: 1, y: 0 }}
             transition={{ duration: 1 }}
           >
-            <span className="text-cyan-400">Robin </span>
-            <span className="text-fuchsia-500">O'Brien</span>
+            <span className="text-fuchsia-500">Robin</span>
+            
           </motion.h1>
           <motion.p
             className="text-xl text-cyan-400"
@@ -55,7 +55,7 @@ const RobinOBrienSite = () => {
             animate={{ opacity: 1 }}
             transition={{ delay: 0.5, duration: 1 }}
           >
-            Innovating the Future of Technology
+            Innovating the Future of Me
           </motion.p>
         </header>
         
